<resources>
  <string name="app_name">NimmaSarkara</string>
<string name="title_activity_landing_page">ApnaSarkar</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="upvote">Upvote</string>
  <string name="downvote">Downvote</string>
  <string name="comments">Comments</string>
  <string name="dummy_date">August 10,2016</string>
  <string name="sai_image">Sai Image</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="add_commnet">Add Comment</string>
  <string name="user_pic">user pic</string>
  <string name="enter_name">Enter Name to get started!</string>
  <string name="enter_no">Enter Mobile Number to get started!</string>
  <string name="your_photos">My Photos</string>
  <string name="share_app">Share App</string>
  <string name="search">search</string>
  <string name="name">User Name</string>
  <string name="sending_otp">Sending otp</string>
  <string name="verify_code">Verify Code</string>
  <string name="verification_code">Verification Code</string>
  <string name="post">Post</string>
  <string name="is_already_register">Already Register ?</string>
  <string name="upload_media">Upload Media</string>
  <string name="title">Title</string>
  <string name="description">Description</string>
  <string name="select_media">Select Media</string>
  <string name="next">Next</string>
  <string name="mobile_no">Mobile No</string>
  <string name="media_pic">Media Pic</string>
  <string name="about_us_text">Shri Sai Baba International Foundation was recently established by ardent devotees of Shri Shirdi Sai Baba to establish righteousness through unconditional service.\n
\nThe charitable foundation aims to conduct a range of service activities for the benefit of destitutes, including serving Free food everyday, proving Waikiki healthcare at no cost through a dedicated hospital that will be established in the future, Protection of cows and breeding of native Indian breeds, distribution of clothes to the destitutes, free education for the deserving students from impoverished families and many more in the future.</string>
  <string name="event_name">Event Name</string>
  <string name="dummy_data">This is the content of the event</string>
  <string name="check_mark">Check mark</string>
  <string name="album_title">Album Title</string>
  <string name="album_cover">Album Cover</string>
  <string name="twenty">20</string>
  <string name="like">Like</string>
  <string name="chevron_left">Chevron left</string>
  <string name="chevron_right">Chevron Right</string>
  <string name="dashboard_menu_about_us">Dashboard menu About us</string>
  <string name="dashboard_menu_vision">Dashboard menu Vision</string>
  <string name="dashboard_menu_donate_idol">Dashboard menu donate Idol</string>
  <string name="dashboard_menu_album">Dashboard menu Album</string>
  <string name="dashboard_menu_gallery">Dashboard menu gallery</string>
  <string name="dashboard_menu_event">Dashboard menu Event</string>
  <string name="slider_image">Slider Image</string>
  <string name="event_description">Event Description</string>
  <string name="event_title">Event Title</string>
  <string name="date_stamp">00–00–0000</string>
  <string name="add_event">Add Event</string>
  <string name="cancel">Cancel</string>
  <string name="title_activity_events_list">Events</string>
  <string name="large_text">
    "Material is the metaphor.\n\n"

    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n"
    "The fundamentals of light, surface, and movement are key to conveying how objects move, "
    "interact, and exist in space and in relation to each other. Realistic lighting shows "
    "seams, divides space, and indicates moving parts.\n\n"

    "Bold, graphic, intentional.\n\n"

    "The foundational elements of print based design typography, grids, space, scale, color, "
    "and use of imagery guide visual treatments. These elements do far more than please the "
    "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
    "imagery, large scale typography, and intentional white space create a bold and graphic "
    "interface that immerse the user in the experience.\n"
    "An emphasis on user actions makes core functionality immediately apparent and provides "
    "waypoints for the user.\n\n"

    "Motion provides meaning.\n\n"

    "Motion respects and reinforces the user as the prime mover. Primary user actions are "
    "inflection points that initiate motion, transforming the whole design.\n"
    "All action takes place in a single environment. Objects are presented to the user without "
    "breaking the continuity of experience even as they transform and reorganize.\n"
    "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
    "Feedback is subtle yet clear. Transitions are ef?cient yet coherent.\n\n"

    "3D world.\n\n"

    "The material environment is a 3D space, which means all objects have x, y, and z "
    "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
    "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
    "position along the z-axis and has a standard 1dp thickness.\n"
    "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
    "emulated by manipulating the y-axis.\n\n"

    "Light and shadow.\n\n"

    "Within the material environment, virtual lights illuminate the scene. Key lights create "
    "directional shadows, while ambient light creates soft shadows from all angles.\n"
    "Shadows in the material environment are cast by these two light sources. In Android "
    "development, shadows occur when light sources are blocked by sheets of material at "
    "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
    "y-axis only. The following example shows the card with a height of 6dp.\n\n"

    "Resting elevation.\n\n"

    "All material objects, regardless of size, have a resting elevation, or default elevation "
    "that does not change. If an object changes elevation, it should return to its resting "
    "elevation as soon as possible.\n\n"

    "Component elevations.\n\n"

    "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
    "does not vary from 6dp in one app to 16dp in another app).\n"
    "Components may have different resting elevations across platforms, depending on the depth "
    "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

    "Responsive elevation and dynamic elevation offsets.\n\n"

    "Some component types have responsive elevation, meaning they change elevation in response "
    "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
    "changes are consistently implemented using dynamic elevation offsets.\n"
    "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
    "to the component’s resting state. They ensure that elevation changes are consistent "
    "across actions and component types. For example, all components that lift on press have "
    "the same elevation change relative to their resting elevation.\n"
    "Once the input event is completed or cancelled, the component will return to its resting "
    "elevation.\n\n"

    "Avoiding elevation interference.\n\n"

    "Components with responsive elevations may encounter other components as they move between "
    "their resting elevations and dynamic elevation offsets. Because material cannot pass "
    "through other material, components avoid interfering with one another any number of ways, "
    "whether on a per component basis or using the entire app layout.\n"
    "On a component level, components can move or be removed before they cause interference. "
    "For example, a floating action button (FAB) can disappear or move off screen before a "
    "user picks up a card, or it can move if a snackbar appears.\n"
    "On the layout level, design your app layout to minimize opportunities for interference. "
    "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
    "when a user tries to pick up one of cards.\n\n"
  </string>
  <string name="about_us">About Us</string>
  <string name="title_activity_dashboard">Shri Sai Koti Baba Mandir</string>
  <string name="vision">Vision</string>
  <string name="donate_idol">Donate Idol</string>
  <string name="gallery">Gallery</string>
  <string name="events">Events</string>
  <string name="albums">Albums</string>
  <string name="no_events">No Events</string>
  <string name="loading_events">Loading Events ....</string>
  <string name="time_stamp">00–00 AM/PM</string>
  <string name="adding_event">Adding Event …</string>
  <string name="title_required">Title Required</string>
  <string name="description_required">Description Required</string>
  <string name="no_albums">No Albums</string>
  <string name="loading_albums">Loading Albums…</string>
  <string name="user_profile">User Profile</string>
  <string name="title_activity_donate_idol">Donate a Baba Idol</string>
  <string name="donate_text">Sri Sai Koti Baba Mandir, as the name symbolises will comprise of one crore Baba idols that will be donated by Shri Shirdi Sai Baba devotees from the world over. It’s a once in a lifetime opportunity to perform this divine act of donating a Baba idol to the temple, which will be consecrated in the temple and remain forever.</string>
  <string name="donate_an_idol">Donate an Idol</string>
  <string name="vision_temple_text">\u2022 With the divine grace and blessings of Shri Shirdi Sai Baba, Shri Manjunath was chosen to construct a temple for Shri Shirdi Sai Baba in Bengaluru.\n \u2022 The land for the temple was donated by a Baba devotee, which is slated be the world\'s largest temple for Shri Shirdi Sai Baba.\n \u2022 Another unique factor that compliments the project is the Sri Sai Koti Baba Mandir, which will house one crore idols of Shri Shirdi Sai Baba. \n \u2022 This project will provide an opportunity to Baba devotees from all over the world to continue one idol each to the Shri Sai Koti Baba Mandir.</string>
  <string name="add_caption">Add Caption</string>
  <string name="ticker_text">Don\'t miss… if not now, there will be no place for pratishtapan after completing</string>
  <string name="your_videos">My Videos</string>
  <string name="shri_sai_koti">Shri Sai Koti Baba Mandir</string>
  <string name="logo">Logo</string>
  <string name="no_photos_to_display">No Photos to display</string>
  <string name="more">More</string>
</resources>
