<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_otp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/landingspagepro"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large"
    tools:context="com.cnbit.nimmasarkara.ui.activity.OtpActivity"
    >
  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="@dimen/logo_width"
      android:layout_height="@dimen/logo_width"
      android:contentDescription="@string/logo"
      android:layout_gravity="center"
      android:src="@drawable/web_hi_res_512"
      />

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <LinearLayout
        android:id="@+id/otpSendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
      <TextView
          android:id="@+id/otp_lbl"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_small"
          android:background="?attr/selectableItemBackground"
          android:text="@string/enter_name"
          android:textColor="@android:color/white"
          android:textSize="@dimen/body_size"
          />

      <EditText
          android:id="@+id/etUserName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_large"
          android:hint="@string/name"
          android:imeOptions="actionNext"
          android:inputType="textCapWords"
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          />

      <EditText
          android:id="@+id/etMobileNumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_large"
          android:hint="@string/mobile_no"
          android:imeOptions="actionDone"
          android:inputType="number"
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          />

      <ImageView
          android:id="@+id/next"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="@dimen/spacing_medium"
          android:background="?attr/selectableItemBackground"
          android:contentDescription="@string/next"
          android:padding="@dimen/spacing_large"
          android:src="@drawable/right_go_arrow"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/code_verification_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
      <EditText
          android:id="@+id/etVerificationCode"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/verification_code"
          android:inputType="number"
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          />
      <Button
          android:id="@+id/btn_verify_code"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="@dimen/spacing_medium"
          android:background="@color/colorPrimaryDark"
          android:padding="@dimen/spacing_medium"
          android:text="@string/verify_code"
          android:textColor="@android:color/white"
          />
    </LinearLayout>
  </FrameLayout>

</LinearLayout>
