<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/spacing_large"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/events"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sub_heading_size"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/title_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <android.support.design.widget.TextInputEditText
          android:id="@+id/event_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/event_title"
          android:inputType="textCapWords"
          />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/description_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        >
      <android.support.design.widget.TextInputEditText
          android:id="@+id/event_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="start"
          android:hint="@string/event_description"
          android:inputType="textMultiLine|textCapSentences"
          android:minLines="2"
          />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:gravity="center_horizontal"
        android:padding="@dimen/spacing_medium"
        android:text="@string/date_stamp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/body_size"
        android:layout_marginTop="@dimen/spacing_large"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/event_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@color/light_grey"
        android:gravity="center_horizontal"
        android:padding="@dimen/spacing_medium"
        android:text="@string/time_stamp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/body_size"
        android:textStyle="bold"
        />

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="end"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/add_event_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/add_event"
          style="?attr/buttonBarButtonStyle"
          />
      <Button
          android:id="@+id/cancel_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cancel"
          style="?attr/buttonBarButtonStyle"
          />
    </android.support.v7.widget.ButtonBarLayout>
  </LinearLayout>
</android.support.v4.widget.NestedScrollView>