<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/spacing_medium"
    android:layout_marginLeft="@dimen/spacing_medium"
    android:layout_marginRight="@dimen/spacing_medium"
    android:layout_marginStart="@dimen/spacing_medium"
    android:layout_marginTop="@dimen/spacing_large"
    app:cardElevation="@dimen/spacing_normal"
    >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/event_bg_light"
      android:baselineAligned="false"
      android:orientation="horizontal"
      android:weightSum="3"
      >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/event_bg_dark"
        android:gravity="center"
        android:paddingEnd="@dimen/spacing_large"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large"
        android:paddingStart="@dimen/spacing_large"
        >
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:contentDescription="@string/check_mark"
          android:src="@drawable/img_check_mark"
          />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:layout_weight="2.5"
        android:padding="@dimen/spacing_medium"
        >
      <TextView
          android:id="@+id/event_date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_alignParentRight="true"
          android:gravity="end"
          android:text="@string/dummy_date"
          android:textColor="@android:color/white"
          />
      <TextView
          android:id="@+id/event_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_marginBottom="@dimen/spacing_medium"
          android:layout_marginEnd="@dimen/spacing_small"
          android:layout_marginRight="@dimen/spacing_small"
          android:layout_toLeftOf="@id/event_date"
          android:layout_toStartOf="@id/event_date"
          android:ellipsize="end"
          android:maxLines="1"
          android:text="@string/event_name"
          android:textColor="@color/event_title"
          android:textSize="@dimen/sub_heading_size"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/event_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/event_title"
          android:text="@string/dummy_data"
          android:textColor="@android:color/black"
          android:textSize="@dimen/body_size"
          />
    </RelativeLayout>
  </LinearLayout>
</android.support.v7.widget.CardView>